--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -15,11 +15,9 @@
     </div>  
   <% end %>
 
-     <ul class="navbar-nav my-2 my-lg-0 ">
-     
-    
+    <ul class="navbar-nav my-2 my-lg-0 ">
       <% if current_user.present?%>
-        <li> History</li>
+        <li> <a class="nav-link" href="/history">  History </a></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn m-btn--pill    btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder ml-3"%></li>
       <% else %>
         <li class="nav-item active">
